<resources>
    <string name="app_name">Zagrajmy</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <string name="account_user_name_placeholder">Name</string>
    <string name="account_user_year_placeholder">Year of Birth</string>
    <string name="account_set_photo_button_text">Make photo</string>
    <string name="match_title_placeholder">Title</string>
    <string name="match_time_placeholder">Time</string>
    <string name="match_participants_number_placeholder">Participants number:</string>
    <string name="create_button_text">Create</string>
    <string name="match_date_placeholder">Date</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">pick time</string>
    <string name="join_button_text">Join</string>
    <string name="leave_button_text">Leave</string>
    <string name="match_date_text">Date:</string>
    <string name="match_description_text">Description</string>
    <string name="match_participants_text">Participants:</string>
    <string name="set_date">Date cannot be empty</string>
    <string name="match_title_text">Title</string>
    <string name="account_save_button_text">Save</string>
</resources>
